base/ljh-front-shop-main-deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ljh-front-shop-main
spec:
  replicas: 10
  selector:
    matchLabels:
      app: ljh-front-shop-main
  template:
    metadata:
      labels:
        app: ljh-front-shop-main
    spec:
      containers:
        - name: ljh-front-shop-main
          image: 654654416925.dkr.ecr.ap-northeast-1.amazonaws.com/ljh-front-shop-main:v1.0.4
          resources:
            requests:
              cpu: 400m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 128Mi
          volumeMounts:
            - name: persistent-storage
              mountPath: /usr/share/nginx/html/images
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: s3-claim
  strategy:
    blueGreen:
      activeService: ljh-front-shop-main-active
      previewService: ljh-front-shop-main-preview
      autoPromotionEnabled: false
      # scaleDownDelaySeconds: 30
