base/ljh-front-shop-main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ljh-front-shop-main
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: ljh-front-shop-main
