base/ljh-front-shop-main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ljh-front-shop-main
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: sg-external
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/success-codes: 200-399
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:654654416925:certificate/69f70a14-adf6-4158-b269-d57fc0c89d80
    external-dns.alpha.kubernetes.io/hostname: test-ljh.youthlab.click
spec:
  ingressClassName: alb
  rules:
    - host: ljh.youthlab.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ljh-front-shop-main
                port:
                  number: 80
